--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 class="text-3xl font-bold underline">
         Hello world!
     </h1>
-    <iframe src="https://sunday-afternoon-design.github.io/MOTH-case-study/"></iframe>
+    <iframe src="https://sunday-afternoon-design.github.io/MOTH-case-study/" id="iframe" style=""></iframe>
     <script src="main.js" async defer></script>
 </body>
 
