--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 </head>
 
 <body>
-    <h1 class="text-3xl font-bold underline">
-        Hello world!
-    </h1>
-    <iframe src="https://sunday-afternoon-design.github.io/MOTH-case-study/" id="iframe" style=""></iframe>
+    <img src="bg.svg" id="bg">
+
+    <!-- <div class="place-content-center" style="width:100%;height:20%">
+        <h1 class="text-3xl font-bold underline">
+            Hello world!
+        </h1>
+    </div> -->
+    <iframe src="https://sunday-afternoon-design.github.io/MOTH-case-study/" id="iframe" class="place-content-center"></iframe>
     <script src="main.js" async defer></script>
 </body>
 
