--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="src/input.css">
+    <link rel="stylesheet" href="./src/input.css">
 </head>
 
 <body>
-    <img src="bg.svg" id="bg">
+    <img src="./bg.svg" id="bg">
 
     <!-- <div class="place-content-center" style="width:100%;height:20%">
         <h1 class="text-3xl font-bold underline">
@@ -19,7 +19,7 @@
         </h1>
     </div> -->
     <iframe src="https://sunday-afternoon-design.github.io/MOTH-case-study/" id="iframe" class="place-content-center"></iframe>
-    <script src="main.js" async defer></script>
+    <script src="./main.js" async defer></script>
 </body>
 
 </html>
